build(pom) No longer need MaxPermSize in Java 8+
Gets rid of associated warnings in Maven output.